--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Tagesschrift&display=swap" rel="stylesheet">
+	<link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/ru/thumb/e/e5/Hogwarts-coat.svg/1200px-Hogwarts-coat.svg.png">
 </head>
 
 <body>
